# MyTrainer

./: .gitignore  CMakeLists.txt  Doxyfile
.qtcreator/: CMakeLists.txt.user.10b35ae  CMakeLists.txt.user.a6f5648  CMakeLists.txt.user.b25cae7
MyTrainer/: CMakeLists.txt
src/: main.cpp
src/business_logic/models/: ModelFactory.cpp  ModelFactory.h  Plan.cpp  Plan.h  Role.h  ScheduleSlot.cpp  ScheduleSlot.h  User.cpp  User.h
src/business_logic/models/subscription/: ActiveState.cpp  ActiveState.h  CancelledState.cpp  CancelledState.h  IPlanState.h  Subscription.cpp  Subscription.h  SuspendedState.cpp  SuspendedState.h
src/business_logic/services/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  IAdminService.h  IAuthService.h  IPlanService.h  IReportService.h  IScheduleService.h  ISchedulingService.h  IUserService.h  PlanService.cpp  PlanService.h  ReportService.cpp  ReportService.h  ScheduleService.cpp  ScheduleService.h  SchedulingService.cpp  SchedulingService.h  UserService.cpp  UserService.h  UserServiceProxy.cpp  UserServiceProxy.h
src/business_logic/services/notifications/: EmailNotifier.cpp  EmailNotifier.h  IObserver.h  (+6 more)
src/persistence/repositories/: IPlanRepository.h  IScheduleRepository.h  IUserRepository.h  PlanRepository.cpp  PlanRepository.h  ScheduleRepository.cpp  ScheduleRepository.h  UserRepository.cpp  UserRepository.h
src/presentation/views/: BookClassView.cpp  BookClassView.h  CreatePlanView.cpp  CreatePlanView.h  DashboardView.cpp  DashboardView.h  LoginView.cpp  LoginView.h  RegisterStudentView.cpp  RegisterStudentView.h  RegisterTrainerView.cpp  RegisterTrainerView.h  ReportView.cpp  ReportView.h  ScheduleView.cpp  ScheduleView.h
test/funcional/: funcional_tests.cpp  funcional_tests.h  main.cpp
test/unit/: main.cpp  unit_tests.cpp  unit_tests.h
(+3 files in other folders)
